--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon server/server.js",
-    "build": "webpack -d --watch"
+    "start": "npm run server & npm run dev",
+    "server": "nodemon server/server.js",
+    "dev": "webpack -d --watch",
+    "prod": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -31,6 +33,7 @@
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.12",
     "node": "^13.3.0",
+    "nodemon": "^2.0.2",
     "pg": "^7.15.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
