--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "nodemon server/server.js",
     "build:dev": "webpack -d --watch",
     "build:prod": "webpack -p",
-    "db:seed": "node server/database/createSeed.js"
+    "seed:create": "node server/database/createSeed.js",
+    "seed:load": "node server/database/loadSeed.js"
   },
   "repository": {
     "type": "git",
