--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
+    "underscore": "^1.9.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
