--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "test",
-    "start": "npm run server & npm run dev",
+    "start": "npm run server & npm run build:dev",
     "server": "nodemon server/server.js",
     "build:dev": "webpack -d --watch",
     "build:prod": "webpack -p",
