--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
+    "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -36,12 +37,14 @@
     "mongoose": "^5.7.12",
     "neo4j-driver": "^4.0.1",
     "node": "^13.3.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.2",
     "pg": "^7.15.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^4.4.1",
     "underscore": "^1.9.1",
+    "unsplash-js": "^6.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   }
